--- a/GalleryWebSite/GalleryWebSite.csproj
+++ b/GalleryWebSite/GalleryWebSite.csproj
@@ -218,6 +218,9 @@
     <Content Include="Content\SQL\DBScript.sql" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Trace.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
