web config update

--- a/GalleryWebSite/Web.Release.config
+++ b/GalleryWebSite/Web.Release.config
@@ -10,7 +10,7 @@
     -->
   <connectionStrings>
     <add name="GalleryDBContext"
-      connectionString="workstation id=DanielasGalleryDB.mssql.somee.com;packet size=4096;user id=DanielasGalleryDB;pwd=F5itcShP;data source=DanielasGalleryDB.mssql.somee.com;persist security info=False;initial catalog=DanielasGalleryDB"
+      connectionString="workstation id=DanielasGalleryDB.mssql.somee.com;packet size=4096;user id=lejo555_SQLLogin_1;pwd=56zcg8zk6e;data source=DanielasGalleryDB.mssql.somee.com;persist security info=False;initial catalog=DanielasGalleryDB"
       providerName="System.Data.SqlClient"
       xdt:Transform="SetAttributes"
       xdt:Locator="Match(name)"/>
