--- a/GalleryWebSite/Web.Release.config
+++ b/GalleryWebSite/Web.Release.config
@@ -15,7 +15,9 @@
       xdt:Transform="SetAttributes"
       xdt:Locator="Match(name)"/>
   </connectionStrings>
-
+  <appSettings>
+    <add key="TraceFilePath" value="d:\DZHosts\LocalUser\lejo555\www.danielasgallery.somee.com\bin\Content\Trace\Trace.txt"/>
+  </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
