--- a/GalleryWebSite/Web.Release.config
+++ b/GalleryWebSite/Web.Release.config
@@ -16,7 +16,7 @@
       xdt:Locator="Match(name)"/>
   </connectionStrings>
   <appSettings>
-    <add key="TraceFilePath" value="d:\DZHosts\LocalUser\lejo555\www.danielasgallery.somee.com\bin\Content\Trace\Trace.txt"/>
+    <add key="TraceFilePath" value="d:\DZHosts\LocalUser\lejo555\www.danielasgallery.somee.com\Trace\Trace.txt"/>
   </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
