--- a/GalleryWebSite/Web.Debug.config
+++ b/GalleryWebSite/Web.Debug.config
@@ -8,6 +8,9 @@
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
     finds an atrribute "name" that has a value of "MyDB".
     -->
+  <appSettings>
+    <add key="TraceFilePath" value=""/>
+  </appSettings>
   <connectionStrings>
     <add name="GalleryDBContext"
        connectionString="server=.\SQLExpress; database=DanielasGalleryDB; integrated security=true;"
@@ -16,6 +19,7 @@
   </connectionStrings>
 
   <system.web>
+
     <!--
       In the example below, the "Replace" transform will replace the entire 
       <customErrors> section of your Web.config file.
